Codigo Ejemplo/1. Principios Universales de Diseño Software/1.3 Composicion vs Herencia/ejercicio/EmpresaEnvio/src/main/java/org/example/bad/Envio.java
package org.example.bad;

public abstract class Envio {

    public abstract double calcularCostoEnvio();

}
